# immich-api-caller

./: .gitignore  README.md  env_example  flake.nix  pyproject.toml
src/immich_api_caller/: __init__.py
