[project]
name = "immich-api-caller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "catppuccin[pygments]>=2.4.1",
    "flake8>=7.1.2",
    "ipython<9.0.0",
    "pylsp-rope>=0.1.17",
    "python-lsp-isort>=0.2.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server[rope]>=1.12.2",
    "ruff>=0.11.2",
]

[tool.uv.workspace]
members = ["immich-api-caller"]

[tool.ruff.format]
docstring-code-format = true
# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 50

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/immich-api-caller"]
# 
# [tool.pytest.ini_options]
# testpaths = [
#     "src/immich-api-caller/tests"
# ]
# 
[tool.rope]
# source_folders = ["src"]
python_path = ["src"]
